fix width/height video on mobile

--- a/src/sections/homeAboutUsSection/HomeAboutUsSection.module.scss
+++ b/src/sections/homeAboutUsSection/HomeAboutUsSection.module.scss
@@ -23,7 +23,7 @@
   border: 1px solid rgba(58, 58, 58, 1);
 
   width: 100%;
-  height: 100%;
+  height: 200px;
   //   margin-left: -20px;
 
   @media screen and (min-width: variables.$tablet) {
